--- a/app/views/resque_schedules/edit.html.erb
+++ b/app/views/resque_schedules/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Resque Schedule</h1>
+<h1>
+  <%= t('helpers.title.edit', model: ResqueSchedule.model_name.human) %>
+</h1>
+
+<%= render partial: 'partials/action' %>
 
 <%= render 'form', resque_schedule: @resque_schedule %>
-
-<%= link_to 'Show', @resque_schedule %> |
-<%= link_to 'Back', resque_schedules_path %>
