show actual Resque schedules

--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -21,3 +21,12 @@
 </table>
 
 <br>
+
+<h3>
+  Actual Resque Schedules
+</h3>
+<pre>
+  <code>
+    <%= JSON.pretty_generate(@actual) %>
+  </code>
+</pre>
