fix a script, small changes

--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -4,7 +4,7 @@
       <%= link_to ResqueSchedule.model_name.human, resque_schedules_path %>
     </div>
     <div class="col-md-3 col-xs-4">
-      <%= link_to 'Resque', '/resque' %>
+      <%= link_to 'Resque', '/resque/overview', target: '_blank' %>
     </div>
   </div>
 </div>
