--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -2,6 +2,8 @@
   <%= t('helpers.title.list', models: ResqueSchedule.model_name.human.pluralize(I18n.locale)) %>
 </h1>
 
+<%= link_to 'SETUP_ALL', setup_all_resque_schedules_path,
+            class: 'btn btn-info', role: :button, method: :put %>
 <table class='table table-bordered table-hover table-striped'>
   <thead>
   <tr>
