--- a/app/views/candle_information/index.html.erb
+++ b/app/views/candle_information/index.html.erb
@@ -2,54 +2,43 @@
   <%= t('helpers.title.list', models: CandleInformation.model_name.human.pluralize(I18n.locale)) %>
 </h1>
 
-<div class="container">
-  <div class="row">
-    <div class="col-xs-4 col-sm-2">
-      <%= CandleInformation.human_attribute_name :usd_jpy_m1_count %>
-    </div>
-    <div class="col-xs-8 col-sm-10">
-      <%= @candle_information.usd_jpy_m1_count.to_s(:delimited) %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-4 col-sm-2">
-      <%= CandleInformation.human_attribute_name :eur_jpy_m1_count %>
-    </div>
-    <div class="col-xs-8 col-sm-10">
-      <%= @candle_information.eur_jpy_m1_count.to_s(:delimited) %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-4 col-sm-2">
-      <%= CandleInformation.human_attribute_name :gbp_jpy_m1_count %>
-    </div>
-    <div class="col-xs-8 col-sm-10">
-      <%= @candle_information.gbp_jpy_m1_count.to_s(:delimited) %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-4 col-sm-2">
-      <%= CandleInformation.human_attribute_name :usd_jpy_m1_latest %>
-    </div>
-    <div class="col-xs-8 col-sm-10">
-      <%# TODO: helper %>
-      <%= @candle_information.usd_jpy_m1_latest&.time %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-4 col-sm-2">
-      <%= CandleInformation.human_attribute_name :eur_jpy_m1_latest %>
-    </div>
-    <div class="col-xs-8 col-sm-10">
-      <%= @candle_information.eur_jpy_m1_latest&.time %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-4 col-sm-2">
-      <%= CandleInformation.human_attribute_name :gbp_jpy_m1_latest %>
-    </div>
-    <div class="col-xs-8 col-sm-10">
-      <%= @candle_information.gbp_jpy_m1_latest&.time %>
-    </div>
-  </div>
-</div>
+<table class='table table-bordered table-hover table-striped'>
+  <thead>
+  <caption>件数</caption>
+  </thead>
+
+  <tbody>
+  <tr>
+    <th class="col-xs-4"><%= CandleInformation.human_attribute_name :usd_jpy_m1_count %></th>
+    <td class="col-xs-8"><%= @candle_information.usd_jpy_m1_count.to_s(:delimited) %></td>
+  </tr>
+  <tr>
+    <th class="col-xs-4"><%= CandleInformation.human_attribute_name :eur_jpy_m1_count %></th>
+    <td class="col-xs-8"><%= @candle_information.eur_jpy_m1_count.to_s(:delimited) %></td>
+  </tr>
+  <tr>
+    <th class="col-xs-4"><%= CandleInformation.human_attribute_name :gbp_jpy_m1_count %></th>
+    <td class="col-xs-8"><%= @candle_information.gbp_jpy_m1_count.to_s(:delimited) %></td>
+  </tr>
+  </tbody>
+</table>
+
+<table class='table table-bordered table-hover table-striped'>
+  <thead>
+  <caption>最新日時</caption>
+  </thead>
+
+  <tbody>
+  <tr>
+    <th class="col-xs-4"><%= CandleInformation.human_attribute_name :usd_jpy_m1_latest %></th>
+    <td class="col-xs-8"><%= candle_latest_time @candle_information.usd_jpy_m1_latest %></td>
+  </tr>
+  <tr>
+    <th class="col-xs-4"><%= CandleInformation.human_attribute_name :eur_jpy_m1_latest %></th>
+    <td class="col-xs-8"><%= candle_latest_time @candle_information.eur_jpy_m1_latest %></td>
+  </tr>
+  <tr>
+    <th class="col-xs-4"><%= CandleInformation.human_attribute_name :gbp_jpy_m1_latest %></th>
+    <td class="col-xs-8"><%= candle_latest_time @candle_information.gbp_jpy_m1_latest %></td>
+  </tr>
+</table>
