[WIP] implementation of candlestick information acquisition

--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -7,6 +7,9 @@
       <%= link_to CandleInformation.model_name.human, candle_information_index_path %>
     </div>
     <div class="col-md-3 col-xs-4">
+      <%= link_to CandleAccess.model_name.human, candle_access_index_path %>
+    </div>
+    <div class="col-md-3 col-xs-4">
       <%= link_to 'Resque', '/resque/overview', target: '_blank' %>
     </div>
   </div>
