--- a/app/views/candle_access/_form.html.erb
+++ b/app/views/candle_access/_form.html.erb
@@ -59,7 +59,9 @@
     </div>
 
     <div class="actions">
-      <%= form.submit '取得実行', class: 'btn btn-primary', name: nil %>
+      <button type="button" id="candle-access" class='btn btn-primary'>
+        取得実行
+      </button>
     </div>
   </div>
 <% end %>
