get resque schedules info via ajax

--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -26,9 +26,9 @@
 
 <h3>
   Actual Resque Schedules
+  <%= image_tag('/images/loading.gif', class: 'loading hide') %>
 </h3>
 <pre>
-  <code>
-    <%= JSON.pretty_generate(@actual) %>
+  <code id="resque-schedules">
   </code>
 </pre>
