fix loading resque schedules

--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -32,3 +32,9 @@
   <code id="resque-schedules">
   </code>
 </pre>
+
+<script>
+  $(document).on('turbolinks:load', (function () {
+    resque_schedules.load_schedules();
+  }));
+</script>
