prevent double submitting

--- a/app/views/candle_access/_form.html.erb
+++ b/app/views/candle_access/_form.html.erb
@@ -60,7 +60,7 @@
 
     <div class="actions">
       <button type="button" id="candle-access" class='btn btn-primary'>
-        取得実行
+        <%= t('helpers.button.acquire') %>
       </button>
     </div>
   </div>
