--- a/app/views/candle_access/index.html.erb
+++ b/app/views/candle_access/index.html.erb
@@ -5,7 +5,7 @@
 <%= render 'form', candle_access: @candle_access %>
 
 <h3>
-  取得結果
+  <%= t('helpers.title.acquired_result') %>
   <%= image_tag('/images/loading.gif', class: 'loading hide') %>
 </h3>
 
