--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -9,6 +9,8 @@
   <thead>
   <tr>
     <th><%= ResqueSchedule.human_attribute_name :name %></th>
+    <th><%= ResqueSchedule.human_attribute_name :description %></th>
+    <th><%= ResqueSchedule.human_attribute_name :cron %></th>
     <th><%= ResqueSchedule.human_attribute_name :enabled %></th>
   </tr>
   </thead>
@@ -17,7 +19,9 @@
   <% @resque_schedules.each do |resque_schedule| %>
     <tr>
       <td><%= link_to resque_schedule.name, resque_schedule %></td>
-      <td><%= resque_schedule.enabled %></td>
+      <td><%= resque_schedule.description %></td>
+      <td><%= resque_schedule.cron %></td>
+      <td><span class="glyphicon <%= check_icon(resque_schedule.enabled) %>"></span></td>
     </tr>
   <% end %>
   </tbody>
