rewrite in ECMAScript2015

--- a/app/views/candle_access/index.html.erb
+++ b/app/views/candle_access/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 <script>
-  $(document).on('turbolinks:load', (function () {
+  $(document).on('turbolinks:load', (() => {
     $('.candle-access.result.columns').columns({
       data: []
     });
