--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -39,7 +39,7 @@
 </pre>
 
 <script>
-  $(document).on('turbolinks:load', (function () {
+  $(document).on('turbolinks:load', (() => {
     resque_schedules.load_schedules();
   }));
 </script>
