rewrite comments and log messages in English

--- a/app/views/candle_information/index.html.erb
+++ b/app/views/candle_information/index.html.erb
@@ -3,7 +3,7 @@
 </h1>
 
 <table class='table table-bordered table-hover table-striped'>
-  <caption>件数</caption>
+  <caption><%= t('text.candle_information.count') %></caption>
 
   <tbody>
   <tr>
@@ -22,7 +22,7 @@
 </table>
 
 <table class='table table-bordered table-hover table-striped'>
-  <caption>最新日時</caption>
+  <caption><%= t('text.candle_information.latest_time') %></caption>
 
   <tbody>
   <tr>
