--- a/app/views/candle_access/index.html.erb
+++ b/app/views/candle_access/index.html.erb
@@ -1,5 +1,8 @@
+<% title = CandleAccess.model_name.human.pluralize(I18n.locale) %>
+<% content_for(:html_title) { title } %>
+
 <h1>
-  <%= t(CandleAccess.model_name.human.pluralize(I18n.locale)) %>
+  <%= title %>
 </h1>
 
 <%= render 'form', candle_access: @candle_access %>
