--- a/app/views/candle_information/index.html.erb
+++ b/app/views/candle_information/index.html.erb
@@ -1,5 +1,8 @@
+<% title = t('helpers.title.list', models: CandleInformation.model_name.human.pluralize(I18n.locale)) %>
+<% content_for(:html_title) { title } %>
+
 <h1>
-  <%= t('helpers.title.list', models: CandleInformation.model_name.human.pluralize(I18n.locale)) %>
+  <%= title %>
 </h1>
 
 <table class='table table-bordered table-hover table-striped'>
