append app name to page title

--- a/app/views/resque_schedules/edit.html.erb
+++ b/app/views/resque_schedules/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:html_title) { @resque_schedule.name } %>
 <h1>
   <%= t('helpers.title.edit', model: ResqueSchedule.model_name.human) %>
 </h1>
