--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -22,7 +22,7 @@
   <tbody>
   <% @resque_schedules.each do |resque_schedule| %>
     <tr>
-      <td><%= link_to resque_schedule.name, resque_schedule %></td>
+      <td><%= link_to resque_schedule.name, edit_resque_schedule_path(resque_schedule) %></td>
       <td><%= resque_schedule.description %></td>
       <td><%= resque_schedule.cron %></td>
       <td><%= check_icon(resque_schedule.enabled) %></td>
