--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -35,9 +35,9 @@
 
 <h3>
   Actual Resque Schedules
-  <%= image_pack_tag('loading.gif', class: 'loading hide') %>
+  <%= image_pack_tag('loading.gif', class: 'loading d-none') %>
 </h3>
-<pre>
+<pre class="resque-schedules">
   <code id="resque-schedules">
   </code>
 </pre>
