--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= favicon_pack_tag 'favicon.ico' %>
 </head>
 
-<body class="<%= 'dark_mode' if cookies['dark_mode'] == 'isActive' %>">
+<body class="<%= 'dark_mode' if cookies['dark_mode'] == 'isActive' %>" data-locale="<%= I18n.locale %>">
 <%= render partial: 'partials/menu' %>
 <div class="container">
   <%= render_notices %>
