--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
   <div class="row text-center bg-primary header">
-    <div class="col-md-3 col-xs-4">
+    <div class="col-md-3 col-6">
       <%= link_to ResqueSchedule.model_name.human, resque_schedules_path %>
     </div>
-    <div class="col-md-3 col-xs-4">
+    <div class="col-md-3 col-6">
       <%= link_to CandleInformation.model_name.human, candle_information_index_path %>
     </div>
-    <div class="col-md-3 col-xs-4">
+    <div class="col-md-3 col-6">
       <%= link_to CandleAccess.model_name.human, candle_access_index_path %>
     </div>
-    <div class="col-md-3 col-xs-4">
+    <div class="col-md-3 col-6">
       <%= link_to 'Resque', '/resque/overview', target: '_blank', rel: 'noopener' %>
     </div>
   </div>
