--- a/app/views/resque_schedules/_form.html.erb
+++ b/app/views/resque_schedules/_form.html.erb
@@ -10,65 +10,53 @@
   <% end %>
 
   <div class="container">
-    <div class="row">
-      <div class="form-group">
-        <div class="col-xs-4 col-sm-2">
-          <%= form.label :name %>
-        </div>
-        <div class="col-xs-8 col-sm-10">
-          <%= resque_schedule.name %>
-        </div>
+    <div class="form-group row">
+      <div class="col-4">
+        <%= form.label :name %>
+      </div>
+      <div class="col-8">
+        <%= resque_schedule.name %>
       </div>
     </div>
-    <div class="row">
-      <div class="form-group">
-        <div class="col-xs-4 col-sm-2">
-          <%= form.label :cron %>
-        </div>
-        <div class="col-xs-8 col-sm-10">
-          <%= resque_schedule.cron %>
-        </div>
+    <div class="form-group row">
+      <div class="col-4">
+        <%= form.label :cron %>
+      </div>
+      <div class="col-8">
+        <%= resque_schedule.cron %>
       </div>
     </div>
-    <div class="row">
-      <div class="form-group">
-        <div class="col-xs-4 col-sm-2">
-          <%= form.label :class_name %>
-        </div>
-        <div class="col-xs-8 col-sm-10">
-          <%= resque_schedule.class_name %>
-        </div>
+    <div class="form-group row">
+      <div class="col-4">
+        <%= form.label :class_name %>
+      </div>
+      <div class="col-8">
+        <%= resque_schedule.class_name %>
       </div>
     </div>
-    <div class="row">
-      <div class="form-group">
-        <div class="col-xs-4 col-sm-2">
-          <%= form.label :queue %>
-        </div>
-        <div class="col-xs-8 col-sm-10">
-          <%= resque_schedule.queue %>
-        </div>
+    <div class="form-group row">
+      <div class="col-4">
+        <%= form.label :queue %>
+      </div>
+      <div class="col-8">
+        <%= resque_schedule.queue %>
       </div>
     </div>
-    <div class="row">
-      <div class="form-group">
-        <div class="col-xs-4 col-sm-2">
-          <%= form.label :description %>
-        </div>
-        <div class="col-xs-8 col-sm-10">
-          <%= resque_schedule.description %>
-        </div>
+    <div class="form-group row">
+      <div class="col-4">
+        <%= form.label :description %>
+      </div>
+      <div class="col-8">
+        <%= resque_schedule.description %>
       </div>
     </div>
 
-    <div class="row">
-      <div class="form-group">
-        <div class="col-xs-4 col-sm-2">
-          <%= form.label :enabled %>
-        </div>
-        <div class="col-xs-8 col-sm-10">
-          <%= form.check_box :enabled, class: 'form-control' %>
-        </div>
+    <div class="form-group row">
+      <div class="col-4">
+        <%= form.label :enabled %>
+      </div>
+      <div class="col-8">
+        <%= form.check_box :enabled, class: 'form-check-input' %>
       </div>
     </div>
 
