Replace columns with Tabulator

--- a/app/packs/entrypoints/application.scss
+++ b/app/packs/entrypoints/application.scss
@@ -2,5 +2,5 @@
 @import '~flatpickr/dist/flatpickr';
 @import '~flatpickr/dist/themes/material_blue';
 @import '~flatpickr/dist/plugins/monthSelect/style';
-@import '../../../vendor/assets/stylesheets/columns_classic';
+@import '~tabulator-tables/dist/css/tabulator';
 @import '../stylesheets/*';
