--- a/app/views/candle_access/index.html.erb
+++ b/app/views/candle_access/index.html.erb
@@ -12,5 +12,5 @@
   <%= image_pack_tag('loading.gif', class: 'loading d-none') %>
 </h3>
 
-<div class="candle-access result columns">
+<div id="candle-access-table">
 </div>
