[WIP][ci skip] Migrate to v5
* Remove .form-group
* Remove .input-group-append and .input-group-prepend
* Add .form-select for select elements

--- a/app/views/resque_schedules/_form.html.erb
+++ b/app/views/resque_schedules/_form.html.erb
@@ -10,7 +10,7 @@
   <% end %>
 
   <div class="container">
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4">
         <%= form.label :name %>
       </div>
@@ -18,7 +18,7 @@
         <%= resque_schedule.name %>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4">
         <%= form.label :cron %>
       </div>
@@ -26,7 +26,7 @@
         <%= resque_schedule.cron %>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4">
         <%= form.label :class_name %>
       </div>
@@ -34,7 +34,7 @@
         <%= resque_schedule.class_name %>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4">
         <%= form.label :queue %>
       </div>
@@ -42,7 +42,7 @@
         <%= resque_schedule.queue %>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4">
         <%= form.label :description %>
       </div>
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4">
         <%= form.label :enabled %>
       </div>
