--- a/app/views/candle_access/_form.html.erb
+++ b/app/views/candle_access/_form.html.erb
@@ -1,34 +1,34 @@
 <%= form_with(model: candle_access, url: access_candle_access_index_path,
               method: :put, remote: true) do |form| %>
   <div class="container">
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4 col-sm-2">
         <%= form.label :candle_format %>
       </div>
       <div class="col-8 col-sm-10">
         <%= form.select :candle_format, Mishina::Constants::CANDLE_FORMATS.invert,
-                        {}, class: 'form-control' %>
+                        {}, class: 'form-control form-select' %>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4 col-sm-2">
         <%= form.label :granularity %>
       </div>
       <div class="col-8 col-sm-10">
         <%= form.select :granularity, Mishina::Constants::GRANULARITIES.invert,
-                        {}, class: 'form-control' %>
+                        {}, class: 'form-control form-select' %>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4 col-sm-2">
         <%= form.label :instrument %>
       </div>
       <div class="col-8 col-sm-10">
         <%= form.select :instrument, Mishina::Constants::INSTRUMENTS.invert,
-                        {}, class: 'form-control' %>
+                        {}, class: 'form-control form-select' %>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4 col-sm-2">
         <%= form.label :count %>
       </div>
@@ -36,14 +36,14 @@
         <%= form.number_field :count, class: 'form-control', min: 1, max: 5000 %>
       </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
       <div class="col-4 col-sm-2">
         <%= form.label :start %>
       </div>
-      <div class="col-8 col-sm-10 input-group datetime-picker" data-wrap="true">
-        <%= form.text_field :start, class: 'form-control', data: {input: true} %>
-        <div class="input-group-append" data-toggle>
-          <div class="input-group-text">
+      <div class="col-8 col-sm-10">
+        <div class="input-group datetime-picker" data-wrap="true">
+          <%= form.text_field :start, class: 'form-control', data: {input: true} %>
+          <div class="input-group-text" data-toggle>
             <span class="fa fa-calendar"></span>
           </div>
         </div>
