--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -10,7 +10,7 @@
       <%= link_to CandleAccess.model_name.human, candle_access_index_path %>
     </div>
     <div class="col-md-3 col-6">
-      <%= link_to 'Resque', '/resque/overview', target: '_blank', rel: 'noopener' %>
+      <%= link_to 'Resque', '/resque/overview', target: '_blank', rel: 'noopener noreferrer' %>
     </div>
   </div>
 </div>
