--- a/app/views/candle_access/_form.html.erb
+++ b/app/views/candle_access/_form.html.erb
@@ -1,5 +1,4 @@
-<%= form_with(model: candle_access, url: access_candle_access_index_path,
-              method: :put, remote: true) do |form| %>
+<%= form_with(model: candle_access, url: access_candle_access_index_path, method: :put, remote: true) do |form| %>
   <div class="container">
     <div class="row">
       <div class="col-4 col-sm-2">
