--- a/app/packs/stylesheets/scaffolds.scss
+++ b/app/packs/stylesheets/scaffolds.scss
@@ -31,6 +31,10 @@ body {
       color: whitesmoke;
     }
 
+    span, table {
+      color: whitesmoke;
+    }
+
     pre {
       color: #f5f5f5;
       background: #333;
