feat: Upgrade Tabulator to v5.0

--- a/app/packs/entrypoints/application.scss
+++ b/app/packs/entrypoints/application.scss
@@ -2,5 +2,5 @@
 @import '~flatpickr/dist/flatpickr';
 @import '~flatpickr/dist/themes/material_blue';
 @import '~flatpickr/dist/plugins/monthSelect/style';
-@import '~tabulator-tables/dist/css/tabulator';
+@import '~tabulator-tables/dist/css/tabulator.min';
 @import '../stylesheets/*';
