feat: [WIP] Upgrade Webpacker to v6.0.0.rc.6
* Remove dependency for `import-glob-loader`
** It is no longer possible to load style sheets with wildcards, so we will need to specify them explicitly.
Before:
```
@import '../stylesheets/*';
```

After
```
@import '../packs/stylesheets/candle_access';
@import '../packs/stylesheets/scaffolds';
@import '../packs/stylesheets/resque_schedules';
```

* Remove dependency for `rails-erb-loader`
** I couldn't figure out how should I write config to compile erb.js files...
** In fact, there are no erb.js files, so I disabled this feature.

--- a/app/javascript/application.scss
+++ b/app/javascript/application.scss
@@ -3,4 +3,6 @@
 @import '~flatpickr/dist/themes/material_blue';
 @import '~flatpickr/dist/plugins/monthSelect/style';
 @import '~tabulator-tables/dist/css/tabulator.min';
-@import '../stylesheets/*';
+@import '../packs/stylesheets/candle_access';
+@import '../packs/stylesheets/scaffolds';
+@import '../packs/stylesheets/resque_schedules';
