--- a/app/packs/entrypoints/application.scss
+++ b/app/packs/entrypoints/application.scss
@@ -3,4 +3,6 @@
 @import '~flatpickr/dist/themes/material_blue';
 @import '~flatpickr/dist/plugins/monthSelect/style';
 @import '~tabulator-tables/dist/css/tabulator.min';
-@import '../stylesheets/*';
+@import '../stylesheets/candle_access';
+@import '../stylesheets/scaffolds';
+@import '../stylesheets/resque_schedules';
