feat: Migrate to importmap-rails

--- a/app/views/candle_access/index.html.erb
+++ b/app/views/candle_access/index.html.erb
@@ -9,7 +9,7 @@
 
 <h3>
   <%= t('helpers.title.acquired_result') %>
-  <%= image_pack_tag('loading.gif', class: 'loading d-none') %>
+  <%= image_tag('loading.gif', class: 'loading d-none') %>
 </h3>
 
 <div id="candle-access-table"></div>
