--- a/app/views/resque_schedules/index.html.erb
+++ b/app/views/resque_schedules/index.html.erb
@@ -37,7 +37,7 @@
 
 <h3>
   Actual Resque Schedules
-  <%= image_pack_tag('loading.gif', class: 'loading d-none') %>
+  <%= image_tag('loading.gif', class: 'loading d-none') %>
 </h3>
 <pre class="resque-schedules">
   <code id="resque-schedules">
