--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= favicon_link_tag 'favicon.ico' %>
 </head>
 
-<%= tag.body class: [dark_mode: cookies['dark_mode'] == 'isActive'], data: {locale: I18n.locale} do %>
+<%= tag.body class: [{dark_mode: cookies['dark_mode'] == 'isActive'}], data: {locale: I18n.locale} do %>
   <%= render partial: 'partials/menu' %>
   <div class="container">
     <%= render_notices %>
